2005-09-07  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Orion Poplawski <orion@cora.nwra.com>

	* server-src/amoverview.pl.in: Add options -last, -num0 and -togo0.
	* man/amoverview.8: Document -last, -num0 and -togo0.

2005-09-07  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Orion Poplawski <orion@cora.nwra.com>

	* server-src/driver.c: Make tape_length and tape_left unsigned long.

2005-07-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Stefan G. Weichinger <monitor@oops.co.at>

	* client-src/sendbackup-gnutar.c: Added RE for new Samba-releases.

2005-07-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	Bug found by John E Hein <jhein@timing.com>.
	* server-src/amadmin.c: Fix of by one with NB_HISTORY.
	* server-src/infofile.c:x: Fix of by one with NB_HISTORY.

2005-06-08  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Jay Fenlason <fenlason@redhat.com>

	* client-src/sendsize.c: Fix dbprintf call.

2005-06-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	    Stefan G. Weichinger <monitor@oops.co.at>

	* example/amanda.conf.in: edited the default-value for the
	                          holdingdisk-usage to "use -100 Mb".
	                          The old value "use 290 Mb" didn't make much
	                          sense anymore.

2005-06-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amverifyrun.sh.in: Remove buggy space.

2005-05-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amadmin.c: Add [--days <num>] argument to tape subcommand.

2005-05-13  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* example/amanda.conf.in: Update from 2.4.5.

2005-05-13  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* docs/*: New documentation from xml-docs.
	* docs/Makefile.am (pkgdata_DATA): Update for new files.

2005-05-13  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* man/Makefile.am (COMMON_MAN_PAGES): Add amanda.conf.5.
