@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: planner.c,v 1.163 2005/03/16 18:09:32 martinea Exp $
+ * $Id: planner.c,v 1.164 2005/09/07 18:05:21 martinea Exp $
  *
  * backup schedule planner for the Amanda backup system.
  */
@@ -2109,6 +2109,10 @@ static void delay_dumps P((void))
 	    else if(est(dp)->degr_level < 0) {
 		delete = 1;
 		message = "but no incremental estimate";
+	    }
+	    else if (est(dp)->degr_size > tape->length) {
+		delete = 1;
+		message = "incremental dump also larger than tape";
 	    }
 	    else {
 		delete = 0;
